Finished index.HTML and shop.HTML

--- a/src/index.html
+++ b/src/index.html
@@ -29,17 +29,18 @@
 
 
     <main class="home-main">
-        <div class="rotating-images">
-            <img src="../public/maninshirt.png" alt="Featured Product" id="rotating-image">
-        </div>
         <div class="home-content">
-            <section>
-                <h2>Welcome to FakeClothing Co.</h2>
-                <p>Discover your style. Shop our latest collection of premium streetwear designed for comfort, individuality, and everyday confidence.</p>
+            <section class="intro">
+                <h2>Style Built for You</h2>
+                <p>At FakeClothing Co., we design bold, minimalist streetwear that’s made to move with you. Whether you're out making noise or keeping things lowkey, our gear helps you show up confidently—every time.</p>
+                <p>Explore new drops, exclusive offers, and the kind of comfort that never goes out of style.</p>
             </section>
             <section class="announcement">
                 <img src="../public/Anouncement.png" alt="Anouncement" class="add">
             </section>
+        </div>
+        <div class="rotating-images">
+            <img src="../public/product1.png" alt="Featured Product" id="rotating-image">
         </div>
     </main>
 
