--- a/src/shop.html
+++ b/src/shop.html
@@ -27,10 +27,10 @@
         </div>
     </header>
 
-    <main>
-        <section>
-            <h2>Welcome to FakeClothing Co.</h2>
-            <p>Discover your style. Shop our latest collection of premium streetwear designed for comfort, individuality, and everyday confidence.</p>
+    <main class="shop-main">
+        <h1>Shop Our Collection</h1>
+        <section id="product-grid" class="product-grid">
+            
         </section>
     </main>
 
@@ -49,6 +49,6 @@
         <p>&copy; 2025 FakeClothing Co. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="shop.js"></script>
 </body>
 </html>
