--- a/src/product.html
+++ b/src/product.html
@@ -27,11 +27,22 @@
         </div>
     </header>
 
-    <main>
-        <section>
-            <h2>Welcome to FakeClothing Co.</h2>
-            <p>Discover your style. Shop our latest collection of premium streetwear designed for comfort, individuality, and everyday confidence.</p>
-        </section>
+    <main class="product-main">
+        <div class="product-layout">
+            <div class="product-image">
+                <img id="product-image" src="" alt="Product image" />
+                <div class="product-name">
+                    <h2 id="product-name"></h2>
+                    <p class="product-price" id="product-price"></p>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+            </div>
+
+            <div class="product-description">
+                <h3>Description</h3>
+                <p id="product-description"></p>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -49,6 +60,6 @@
         <p>&copy; 2025 FakeClothing Co. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="product.js"></script>
 </body>
 </html>
