community page started

--- a/src/contact.html
+++ b/src/contact.html
@@ -27,11 +27,8 @@
         </div>
     </header>
 
-    <main>
-        <section>
-            <h2>Welcome to FakeClothing Co.</h2>
-            <p>Discover your style. Shop our latest collection of premium streetwear designed for comfort, individuality, and everyday confidence.</p>
-        </section>
+    <main class="contact-main">
+        <section class
     </main>
 
     <footer>
