--- a/src/product.html
+++ b/src/product.html
@@ -38,10 +38,19 @@
                 </div>
             </div>
 
-            <div class="product-description">
-                <h3>Description</h3>
-                <p id="product-description"></p>
-            </div>
+            <div class="product-options">
+                <div class="product-description">
+                    <h3>Description</h3>
+                    <p id="product-description"></p>
+                </div>
+                <div class="size-list">
+                    <ul>
+                        <li><button class="size-button">S</button></li>
+                        <li><button class="size-button">M</button></li>
+                        <li><button class="size-button">L</button></li>
+                    </ul>
+                </div>
+            </div>    
         </div>
     </main>
 
