customer facing pages HTML completed

--- a/src/community.html
+++ b/src/community.html
@@ -45,18 +45,19 @@
                     </form>
                 </div>
             </div>
-            <div class="Socail-links">
+            <div class="links-container">
                 <p>Connect with us:</p>
-                <a href="https://www.instagram.com/YourBrandName" target="_blank" rel="instagram">
-                    <img src="../public/instagram-icon.png" alt="Instagram" />
-                    Instagram
-                </a>
-                <a href="https://www.tiktok.com/@YourBrandName" target="_blank" rel="tiktok">
-                    <img src="../public/tiktok-icon.png" alt="TikTok" />
-                </a>
-                <a href="https://x.com/YourBrandName" target="_blank" rel="x">
-                    <img src="../public/x-icon.png" alt="X (Twitter)" />
-                </a>
+                <div class="Socail-links">    
+                    <a href="https://www.instagram.com/FakeClothing" target="_blank" rel="instagram">
+                        <img src="../public/instagram-icon.png" alt="Instagram" />
+                    </a>
+                    <a href="https://www.tiktok.com/@FakeClothing" target="_blank" rel="tiktok">
+                        <img src="../public/tiktok-icon.png" alt="TikTok" />
+                    </a>
+                    <a href="https://x.com/FakeClothing" target="_blank" rel="x">
+                        <img src="../public/x-icon.png" alt="X (Twitter)" />
+                    </a>
+                </div>
             </div>
         </section>
     </main>
