--- a/src/cart.html
+++ b/src/cart.html
@@ -20,18 +20,25 @@
                         <li><a href="shop.html">SHOP</a></li>
                         <li><a href="community.html">COMMUNITY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
-                        <li><a href="login.html">SIGN IN</a></li>
+                        <li id="sign-in-link"><a href="login.html">SIGN IN</a></li>
                     </ul>
                 </nav>
+                <div class="user-info" id="user-info" style="display: none;">
+                    <span id="welcome-message"></span>
+                    <a href="cart.html" id="cart-button">CART</a>
+                </div>
             </div>    
         </div>
     </header>
 
     <main>
-        <section>
-            <h2>Welcome to FakeClothing Co.</h2>
-            <p>Discover your style. Shop our latest collection of premium streetwear designed for comfort, individuality, and everyday confidence.</p>
-        </section>
+        <h1>Your Cart</h1>
+        <section id="cart-grid" class="cart-grid"></section>
+
+        <div class="cart-summary">
+            <p id="cart-total">Total: $0.00</p>
+            <a href="checkout.html" class="checkout-link">Proceed to Checkout</a>
+        </div>
     </main>
 
     <footer>
@@ -49,6 +56,7 @@
         <p>&copy; 2025 FakeClothing Co. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="auth.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
