--- a/src/checkout.html
+++ b/src/checkout.html
@@ -20,19 +20,32 @@
                         <li><a href="shop.html">SHOP</a></li>
                         <li><a href="community.html">COMMUNITY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
-                        <li><a href="login.html">SIGN IN</a></li>
+                        <li id="sign-in-link"><a href="login.html">SIGN IN</a></li>
                     </ul>
                 </nav>
+                <div class="user-info" id="user-info" style="display: none;">
+                    <span id="welcome-message"></span>
+                    <a href="cart.html" id="cart-button">CART</a>
+                </div>
             </div>    
         </div>
     </header>
 
-    <main>
-        <section>
-            <h2>Welcome to FakeClothing Co.</h2>
-            <p>Discover your style. Shop our latest collection of premium streetwear designed for comfort, individuality, and everyday confidence.</p>
-        </section>
+    <main class="checkout-container">
+        <h1>Checkout</h1>
+
+            <section id="checkout-items" class="checkout-items"></section>
+
+            <section class="checkout-summary">
+                <h2>Order Summary</h2>
+                <p id="checkout-total">Total: $0.00</p>
+                <button id="place-order-btn">Place Order</button>
+                <p>NOTE: I am not going to set up an</p>
+                <p>actual checkout method as this is</p>
+                <p>just a simulation</p>
+            </section>
     </main>
+
 
     <footer>
         <div class="footer-container">
@@ -49,6 +62,7 @@
         <p>&copy; 2025 FakeClothing Co. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="auth.js"></script>
+    <script src="checkout.js"></script>
 </body>
 </html>
