--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,13 @@
                         <li><a href="shop.html">SHOP</a></li>
                         <li><a href="community.html">COMMUNITY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
-                        <li><a href="login.html">SIGN IN</a></li>
+                        <li id="sign-in-link"><a href="login.html">SIGN IN</a></li>
                     </ul>
                 </nav>
+                <div class="user-info" id="user-info" style="display: none;">
+                    <span id="welcome-message"></span>
+                    <a href="cart.html" id="cart-button">CART</a>
+                </div>
             </div>    
         </div>
     </header>
@@ -58,7 +62,7 @@
         </div>
         <p>&copy; 2025 FakeClothing Co. All rights reserved.</p>
     </footer>
-
+    <script src="auth.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
