--- a/src/product.html
+++ b/src/product.html
@@ -20,9 +20,13 @@
                         <li><a href="shop.html">SHOP</a></li>
                         <li><a href="community.html">COMMUNITY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
-                        <li><a href="login.html">SIGN IN</a></li>
+                        <li id="sign-in-link"><a href="login.html">SIGN IN</a></li>
                     </ul>
                 </nav>
+                <div class="user-info" id="user-info" style="display: none;">
+                    <span id="welcome-message"></span>
+                    <a href="cart.html" id="cart-button">CART</a>
+                </div>
             </div>    
         </div>
     </header>
@@ -45,9 +49,9 @@
                 </div>
                 <div class="size-list">
                     <ul>
-                        <li><button class="size-button">S</button></li>
-                        <li><button class="size-button">M</button></li>
-                        <li><button class="size-button">L</button></li>
+                        <li><button class="size-button" data-size="S">S</button></li>
+                        <li><button class="size-button" data-size="M">M</button></li>
+                        <li><button class="size-button" data-size="L">L</button></li>
                     </ul>
                 </div>
             </div>    
@@ -69,6 +73,7 @@
         <p>&copy; 2025 FakeClothing Co. All rights reserved.</p>
     </footer>
 
+    <script src="auth.js"></script>
     <script src="product.js"></script>
 </body>
 </html>
